--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+<!-- This particular color is used as primary color in the application -->
+    <color name='main'>#756EF3</color>
+    <color name='main_light'>#859399</color>
+
+
 </resources>
