--- a/app/src/main/res/drawable/bottom_nav_drawable.xml
+++ b/app/src/main/res/drawable/bottom_nav_drawable.xml
@@ -4,12 +4,12 @@
     <solid android:color="@android:color/white" />
 
     <corners
-        android:topLeftRadius="20dp"
-        android:topRightRadius="20dp" />
+        android:topLeftRadius="12dp"
+        android:topRightRadius="12dp" />
 
     <padding
+        android:bottom="16dp"
         android:left="16dp"
-        android:top="16dp"
         android:right="16dp"
-        android:bottom="16dp" />
+        android:top="16dp" />
 </shape>
