--- a/app/src/main/res/menu/actionbar_menu.xml
+++ b/app/src/main/res/menu/actionbar_menu.xml
@@ -5,12 +5,13 @@
     <item
         android:id="@+id/app_bar_search"
         android:icon="@drawable/ic_search"
-        android:title="Search"
-        app:showAsAction="always" />
+        android:title="@string/search"
+        app:actionViewClass="android.widget.SearchView"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/app_bar_notifications"
         android:icon="@drawable/ic_bell"
-        android:title="Notifications"
+        android:title="@string/notifications"
         app:showAsAction="always" />
 </menu>
