--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="vehicle_summary_header_height">200dp</dimen>
+    <dimen name="vehicle_summary_header_height">80dp</dimen>
     <dimen name="standard_padding">16dp</dimen>
     <dimen name="standard_radius">12dp</dimen>
+    <dimen name="vehicle_count_text_size">24sp</dimen>
+    <dimen name="margin_normal">5dp</dimen>
 </resources>
