--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,12 @@
     <dimen name="standard_radius">12dp</dimen>
     <dimen name="vehicle_count_text_size">24sp</dimen>
     <dimen name="margin_normal">5dp</dimen>
+    <dimen name="margin_big">10dp</dimen>
+    <dimen name="margin_small">2dp</dimen>
+    <dimen name="trace_list_item_height">72dp</dimen>
+    <dimen name="list_item_vehicle_status_indicator_width">5dp</dimen>
+    <dimen name="list_item_vehicle_id_primary_text_size">22sp</dimen>
+    <dimen name="list_item_vehicle_id_secondary_text_size">14sp</dimen>
+    <dimen name="list_item_status_secondary_text_size">12sp</dimen>
+
 </resources>
