--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,7 @@
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">#E9E8E8</item>
         <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:textColorHint">@color/main_light</item>
 
     </style>
