WIP Trace detail screen being added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name='idle_vehicle_count_color'>#F5B914</color>
     <color name='stopped_vehicle_count_color'>#EB4E41</color>
     <color name='offline_vehicle_count_color'>#232323</color>
+    <color name='trace_details_border_color'>#756EF3</color>
 
 
 </resources>
