--- a/app/src/main/res/layout/layout_trace_list_item.xml
+++ b/app/src/main/res/layout/layout_trace_list_item.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/drawable_rounded_corner_with_white_bg"
     android:orientation="horizontal"
     android:layout_marginVertical="@dimen/margin_normal"
-    android:layout_marginHorizontal="@dimen/margin_big">
+    android:layout_marginHorizontal="@dimen/margin_very_big">
 
     <!--  status indicator color will be determined in runtime based on vehicle status  -->
     <View
@@ -103,6 +103,7 @@
         android:id="@+id/status_text_layout"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:minWidth="@dimen/min_width_status_text"
         android:layout_gravity="center"
         android:layout_marginStart="@dimen/margin_normal"
         android:background="@drawable/drawable_rounded_corner_with_running_color"
