--- a/app/src/main/res/layout/layout_vehicle_overview_and_toolbox.xml
+++ b/app/src/main/res/layout/layout_vehicle_overview_and_toolbox.xml
@@ -6,12 +6,15 @@
     android:padding="@dimen/standard_padding">
 
     <include
+        android:id="@+id/vehicle_count_header"
         layout="@layout/layout_vehicle_overview_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_normal" />
 
-    <include layout="@layout/layout_vehicle_toolbox"
+    <include
+        android:id="@+id/vehicle_toolbox_header"
+        layout="@layout/layout_vehicle_toolbox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_normal"/>
