--- a/app/src/main/res/layout/layout_vehicle_toolbox.xml
+++ b/app/src/main/res/layout/layout_vehicle_toolbox.xml
@@ -6,6 +6,7 @@
     android:orientation="horizontal">
 
     <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/search_vehicle_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_normal"
