--- a/app/src/main/res/layout/layout_circular_progress_layout.xml
+++ b/app/src/main/res/layout/layout_circular_progress_layout.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="start"
+    android:layout_gravity="center"
     android:orientation="horizontal">
 
     <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+       android:layout_marginEnd="@dimen/margin_normal">
 
         <ProgressBar
             android:id="@+id/progressBar_diesel"
@@ -47,7 +46,6 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/progressText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
@@ -60,7 +58,8 @@
 
     <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_normal">
 
         <ProgressBar
             android:id="@+id/progressBar_adblue"
@@ -98,7 +97,6 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/progressText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
