--- a/app/src/main/res/drawable/ic_filter.xml
+++ b/app/src/main/res/drawable/ic_filter.xml
@@ -3,11 +3,11 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:pathData="M22,3H2L10,12.46V19L14,21V12.46L22,3Z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#859399"
-      android:strokeLineCap="round"/>
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M22,3H2L10,12.46V19L14,21V12.46L22,3Z"
+        android:strokeWidth="2"
+        android:strokeColor="#859399"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
 </vector>
