--- a/app/src/main/res/drawable/ic_trace.xml
+++ b/app/src/main/res/drawable/ic_trace.xml
@@ -3,11 +3,11 @@
     android:height="22dp"
     android:viewportWidth="24"
     android:viewportHeight="22">
-  <path
-      android:pathData="M1,5V21L8,17L16,21L23,17V1L16,5L8,1L1,5Z"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#756EF3"
-      android:strokeLineCap="round"/>
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M1,5V21L8,17L16,21L23,17V1L16,5L8,1L1,5Z"
+        android:strokeWidth="2"
+        android:strokeColor="#756EF3"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
 </vector>
