--- a/app/src/main/res/layout/layout_vehicle_overview_header.xml
+++ b/app/src/main/res/layout/layout_vehicle_overview_header.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/vehicle_summary_header_height"
     android:background="@drawable/drawable_rounded_corner_with_white_bg"
@@ -18,10 +17,10 @@
             android:id="@+id/running_vehicle_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="10"
             android:textColor="@color/running_vehicle_count_color"
             android:textSize="@dimen/vehicle_count_text_size"
-            android:textStyle="bold"
-            android:text="10" />
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -43,10 +42,10 @@
             android:id="@+id/idle_vehicle_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="5"
             android:textColor="@color/idle_vehicle_count_color"
             android:textSize="@dimen/vehicle_count_text_size"
-            android:textStyle="bold"
-            android:text="5" />
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -68,10 +67,10 @@
             android:id="@+id/stopped_vehicle_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="3"
             android:textColor="@color/stopped_vehicle_count_color"
             android:textSize="@dimen/vehicle_count_text_size"
-            android:textStyle="bold"
-            android:text="3" />
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -93,10 +92,10 @@
             android:id="@+id/offline_vehicle_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="2"
             android:textColor="@color/offline_vehicle_count_color"
             android:textSize="@dimen/vehicle_count_text_size"
-            android:textStyle="bold"
-            android:text="2" />
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
